fix duplicate content-wrap in loadContent function return

--- a/src/index.scss
+++ b/src/index.scss
@@ -312,7 +312,7 @@ footer {
 /* ## DESKTOP STYLES ## */
 
 @media screen and (min-width: 840px) {
-    .content-wrap {
+    .home-wrap {
         height: 100%;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
